2004-03-05  Pavel Roskin  <proski@gnu.org>

	* subshell.c: Partly revert previous patch to preserve
	translated strings.

2004-02-09  Pavel Roskin  <proski@gnu.org>

	* subshell.c: Use "\r\n" at the end of all error messages.
	Don't use perror().  Make error messages more exact.

2004-01-23  Pavel Roskin  <proski@gnu.org>

	* utilunix.c (canonicalize_pathname): Add support for UNC paths.

	* utilunix.c (canonicalize_pathname): Return void to make it
	clear that the conversion is done in place.  Adjust all callers.

	* filegui.c (init_replace): Don't show the "Reget" button when
	moving files.  Reported by Arpad Biro <biro_arpad@yahoo.com>

	* fileopctx.h: Add "operation" filed to FileOpContext.
	* fileopctx.c (file_op_context_new): Add "operation" argument.
	* filegui.c (file_op_context_create_ui): Remove "operation"
	argument, it's known already.  Adjust all callers.

2004-01-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* user.c (execute_menu_command): Put /bin/sh in the beginning of
	the script.

2004-01-22  Pavel Roskin  <proski@gnu.org>

	* screen.c (display_mini_info): Correctly fill the space after
	"<readlink failed>".

	* glibcompat.h: Fix definition of g_try_realloc().

2003-12-24  Dmitry Alexeyev  <dmi_a@qnx.org.ru>

	* key.c (get_event): Treat all negative values of gpm_fd in the
	same way.  Add one more check that gpm is alive.

2003-12-24  Pavel Roskin  <proski@gnu.org>

	* layout.c (rotate_dash): Set color before printing the dash.

2003-12-01  Pavel Roskin  <proski@gnu.org>

	* command.c (examine_cd): Add tilde expansion.

2003-11-28  Pavel Roskin  <proski@gnu.org>

	* utilunix.c (tilde_expand): Correct last fix, simplify code.
	Reported by David Sterba <dave@jikos.cz>

2003-11-27  Pavel Roskin  <proski@gnu.org>

	* execute.c (toggle_panels): Refresh panels after returning from
	Ctrl-O.

	* cmd.c (view_file_cmd): Use input_expand_dialog().

	* wtools.c (quick_dialog_skip): Perform tilde expansion on input
	widgets that use cd completion.
